Bug 448613 - Android render image sequence fails
Summary: Android render image sequence fails
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Animation (other bugs)
Version First Reported In: 5.0.2
Platform: Android Android 8.x
: NOR normal
Target Milestone: ---
Assignee: sh_zam
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-01-16 18:00 UTC by Know Zero
Modified: 2022-03-01 09:00 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Know Zero 2022-01-16 18:00:13 UTC
SUMMARY

When you try to render an image sequence on Android in Krita 5, it leads to an error:
Failed to render animation frames! Output files are incomplete

STEPS TO REPRODUCE
1. Make a simple animation, 2 frames even
2. Render animation and select image sequence and output folder

OBSERVED RESULT

Fails to render

EXPECTED RESULT

rendering the frames

SOFTWARE/OS VERSIONS
Android 8.1 - Samsung Galaxy A10 2016

ADDITIONAL INFORMATION

Regular export as to same folder works, so it isn't an issue saving the content or a permissions issue.

I also tried it on my ChromeOS Android device, and it does work properly there.

Another user has reported same issue with their Samsung S7 tablet.
Comment 1 sh_zam 2022-01-20 11:37:45 UTC
Git commit 6c2345f67b0024b31439dd5033c2c3059bf13daa by Sharaf Zaman.
Committed on 20/01/2022 at 11:37.
Pushed by szaman into branch 'master'.

Bugfix: Directory to render animation doesn't exit.

with .arg().arg() based replace, if the path contains %1 (which is often
true on Android). The original Uri is replaced rather than the other
intended argument

M  +1    -3    libs/ui/animation/KisAnimationRender.cpp
M  +2    -2    plugins/dockers/compositiondocker/compositiondocker_dock.cpp

https://invent.kde.org/graphics/krita/commit/6c2345f67b0024b31439dd5033c2c3059bf13daa
Comment 2 sh_zam 2022-03-01 09:00:17 UTC
Git commit 544a2c74b3b161f5f2a6528bc76f90e25db97440 by Sharaf Zaman.
Committed on 01/03/2022 at 08:31.
Pushed by szaman into branch 'krita/5.0'.

Bugfix: Directory to render animation doesn't exit.

with .arg().arg() based replace, if the path contains %1 (which is often
true on Android). The original Uri is replaced rather than the other
intended argument
(cherry picked from commit 6c2345f67b0024b31439dd5033c2c3059bf13daa)

M  +1    -3    libs/ui/animation/KisAnimationRender.cpp
M  +2    -2    plugins/dockers/compositiondocker/compositiondocker_dock.cpp

https://invent.kde.org/graphics/krita/commit/544a2c74b3b161f5f2a6528bc76f90e25db97440