Bugfix: Directory to render animation doesn't exit.

with .arg().arg() based replace, if the path contains %1 (which is often
true on Android). The original Uri is replaced rather than the other
intended argument

BUG:448613
(cherry picked from commit 6c2345f67b0024b31439dd5033c2c3059bf13daa)